[tool.poetry]
name = "nnpu-learn"
version = "0.1.0"
description = "Non-negative Unlabeled Learning"
authors = ["lv416e <ryo169116961@icloud.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
scikit-learn = "^1.2.2"
torchvision = "^0.15.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
sagemaker = "^2.169.0"
toml = "^0.10.2"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
notebook = "^6.5.4"
boto3 = "^1.26.165"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
